# tune-server-rust

./: .dockerignore  .env.tune.example  .gitignore  CHANGELOG.md  Caddyfile.bridge  Cargo.toml  Dockerfile  Dockerfile.bridge  Dockerfile.dist  MIGRATION.md  README.md  bench.sh  cliff.toml  deny.toml  docker-compose.bridge.yml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  tune.db-shm  tune.db-wal  tune.toml.example
.cargo/: config.toml
docs/: ARCHITECTURE-CIBLE-v0.9.md  PATH-TO-v0.8.50.md  PORTING-HISTORY-REPO-PLAN.md  PORTING-REPOS-PLAYBOOK.md  POSTGRES-DEPLOY.md  (+13 more)
tune-bridge/: Cargo.toml
tune-bridge/src/: api_proxy.rs  main.rs  protocol.rs  state.rs  stream_proxy.rs  ws_client.rs  ws_server.rs
tune-cli/: Cargo.toml
tune-cli/src/: main.rs  migrate.rs
tune-core/: Cargo.toml  build.rs
tune-core/benches/: dsd_to_pcm.rs
tune-core/migrations/: README.md
tune-core/migrations/postgres/: 001_initial_schema.sql  002_fts_tsvector.sql  003_track_metadata_columns.sql  004_listen_history.sql  005_additional_tables.sql  006_missing_columns.sql  007_podcast_subscriptions.sql  008_schema_sync.sql  009_smart_playlists_match_mode.sql  010_numeric_column_types.sql
tune-core/src/: alarms.rs  api_analytics.rs  artist_enrichment.rs  artwork.rs  auto_fix.rs  batch_metadata.rs  buffer.rs  bug_report.rs  collaborative.rs  config.rs  config_backup.rs  cover_fetcher.rs  credentials_vault.rs  credit_enricher.rs  dac_calibration.rs  dashboard.rs  db_backup.rs  deezer_proxy.rs  digest.rs  duplicate_detector.rs  error.rs  event_bus.rs  event_types.rs  export.rs  fingerprint.rs  full_text_search.rs  genre_tree.rs  health.rs  health_monitor.rs  lastfm_enrichment.rs  lib.rs  library_importer.rs  library_watcher.rs  license.rs  lyrics.rs  m3u_parser.rs  metadata.rs  metadata_enrichment.rs  metadata_matcher.rs  metadata_suggestions.rs  (+38 more)
tune-core/src/ai/: client.rs  executor.rs  mod.rs  recommendations.rs  tools.rs
tune-core/src/audio/: aiff.rs  analyzer.rs  ape.rs  channels.rs  convolver.rs  decode.rs  dff.rs  dsd_to_dop.rs  dsd_to_pcm.rs  dsf.rs  encoder.rs  eq.rs  faststart.rs  formats.rs  iso_sacd.rs  levels.rs  mixer.rs  mod.rs  pipeline.rs  resampler.rs  wav.rs  wavpack.rs
tune-core/src/cloud/: bio_sync.rs  community.rs  community_sync.rs  concert_alerts.rs  digest.rs  library_sync.rs  mod.rs  playlist_hub.rs  plugins.rs  recommendations.rs  relay.rs  sso.rs  telemetry.rs
tune-core/src/db/: album_repo.rs  artist_repo.rs  backend.rs  engine.rs  history_repo.rs  migrations.rs  mod.rs  models.rs  pg_migrate.rs  play_queue_repo.rs  playlist_repo.rs  postgres.rs  postgres_e2e.rs  profile_repo.rs  radio_repo.rs  rating_repo.rs  settings_repo.rs  source_link_repo.rs  sqlite.rs  streaming_favorites_repo.rs  tag_repo.rs  track_metadata_repo.rs  track_repo.rs  zone_repo.rs
tune-core/src/discovery/: device.rs  mdns.rs  minimal_dmr.rs  mod.rs  ssdp.rs  xml_parser.rs
tune-core/src/http/: client.rs  deezer_proxy.rs  fetch.rs  mod.rs  streamer.rs
tune-core/src/metadata/: artist_enrichment.rs  artist_split.rs  auto_fix.rs  batch.rs  bio_batch.rs  credit_enricher.rs  enrichment.rs  fingerprint.rs  lastfm.rs  lyrics.rs  matcher.rs  mod.rs  musicbrainz_release.rs  suggestions.rs  tag_writer.rs
tune-core/src/outputs/: airplay.rs  asio_exclusive.rs  bluos.rs  bridge.rs  chromecast.rs  coreaudio_exclusive.rs  didl.rs  dlna.rs  dlna_buffer_stats.rs  dlna_test.rs  hqplayer.rs  local.rs  mock.rs  mod.rs  oaat.rs  oh_events.rs  openhome.rs  registry.rs  slimproto.rs  squeezebox.rs  traits.rs  wasapi_exclusive.rs
tune-core/src/outputs/airplay2/: mod.rs  pairing.rs
tune-core/src/outputs/oaat/: helpers.rs  integration_test.rs  mod.rs  multiroom.rs  output.rs
tune-core/src/playback/: auto_dj.rs  crossfade.rs  dj_player.rs  gapless.rs  mod.rs  queue.rs  radio_handler.rs
tune-core/src/scanner/: hasher.rs  mod.rs  quality.rs  walker.rs  watcher.rs
tune-core/src/slimproto/: cli_server.rs  mod.rs
tune-core/src/streaming/: amazon.rs  deezer.rs  deezer_decrypt.rs  mod.rs  podcasts.rs  qobuz.rs  radiofrance.rs  registry.rs  spotify.rs  spotify_connect.rs  tidal.rs  traits.rs  youtube.rs
tune-core/src/zones/: group.rs  latency.rs  mod.rs  sync_engine.rs
tune-core/tests/: audio_integration.rs
tune-core/tests/fixtures/: test.aiff  test.flac  test.m4a
tune-core/tests/fixtures/ape/: sine_16s_c3000.ape
tune-desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
tune-desktop/capabilities/: default.json
tune-desktop/src/: lib.rs  main.rs
tune-desktop/web/: index.html
tune-ffi/: Cargo.toml  build-android.sh
tune-ffi/.cargo/: config.toml
tune-ffi/src/: lib.rs
tune-pyo3/: Cargo.toml
tune-pyo3/src/: db_wrapper.rs  discovery_wrapper.rs  lib.rs  pipeline_wrapper.rs  scanner_wrapper.rs
tune-server/: Cargo.toml
tune-server/src/: auth.rs  auto_resume.rs  auto_scan.rs  background.rs  background_tasks.rs  config.rs  discovery_setup.rs  error.rs  i18n.rs  i18n_server.json  lib.rs  main.rs  premium_guard.rs  scan_import.rs  startup.rs  state.rs  windows_migrate.rs
tune-server/src/routes/: active_profile.rs  ai.rs  airplay_pairing.rs  archive.rs  bandcamp.rs  bridge.rs  cd_rip.rs  cloud.rs  connect.rs  converter.rs  dac_calibration.rs  dashboard.rs  deezer_proxy_handler.rs  developer_api.rs  devices.rs  digest.rs  discogs.rs  dj.rs  dto.rs  eq_pro.rs  export.rs  graphql.rs  history.rs  home.rs  homeassistant.rs  hqplayer.rs  hue.rs  i18n.rs  kiosk.rs  lastfm_social.rs  library.rs  listenbrainz.rs  listening_stats.rs  lyrics.rs  marketplace.rs  mediasync.rs  metadata.rs  mod.rs  mqa.rs  multi_server.rs  (+46 more)
tune-server/src/routes/system/: admin.rs  backup.rs  config.rs  config_backup.rs  convert.rs  database.rs  diagnostics.rs  enrich.rs  import.rs  mod.rs  playlist_hub.rs  plugins.rs  remote.rs  scan.rs  tags.rs  update.rs  youtube.rs
tune-server/tests/: integration.rs
tune-widget/src-tauri/: Cargo.toml  tauri.conf.json
tune-widget/src-tauri/capabilities/: default.json
tune-widget/src-tauri/icons/: icon.icns
tune-widget/src-tauri/src/: main.rs  server.rs
(+313 files in other folders)
