[workspace]
members = ["tune-core", "tune-pyo3", "tune-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Bertrand Clech <bertrand.clech@orange.fr>"]
repository = "https://github.com/renesenses/tune-server-rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
lofty = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
walkdir = "2"
rayon = "1.10"
notify = "7"
md-5 = "0.10"
quick-xml = "0.37"
mdns-sd = "0.12"
socket2 = "0.5"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
futures-util = "0.3"
bytes = "1"
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
rusqlite = { version = "0.32", features = ["bundled"] }
