[workspace]
members = ["tune-core", "tune-server", "tune-cli"]
resolver = "2"

[workspace.package]
version = "0.8.48"
edition = "2024"
license = "MIT"
authors = ["Bertrand Clech <bertrand.clech@orange.fr>"]
repository = "https://github.com/renesenses/tune-server-rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
lofty = "0.24"
id3 = "1.17"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "blocking", "query", "form"] }
walkdir = "2"
rayon = "1.10"
notify = "7"
md-5 = "0.10"
quick-xml = "0.40"
mdns-sd = "0.20"
socket2 = "0.5"
if-addrs = "0.13"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
futures-util = "0.3"
async-trait = "0.1"
bytes = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "postgres"] }
rusqlite = { version = "0.39", features = ["bundled", "functions"] }
urlencoding = "2"
toml = "0.8"
cpal = "0.17"
rust_cast = "0.21"
sha2 = "0.10"
blowfish = "0.9"
chrono = "0.4"
cbc = "0.1"
regex = "1"
csv = "1"
symphonia = { version = "0.6", features = ["mp3", "flac", "wav", "aac", "alac", "vorbis", "pcm", "isomp4", "ogg"] }
rubato = "3"
hound = "3.5"
unicode-normalization = "0.1"
oaat-core = { version = "0.2.0", default-features = false }
oaat-controller = { version = "0.2.0", default-features = false }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.dev]
opt-level = 0
debug = 0

[profile.release]
opt-level = 2
lto = "thin"
strip = true
codegen-units = 4
panic = "abort"
