[package]
name = "tune-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tune"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
