[package]
name = "tune-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
lofty = { workspace = true }
reqwest = { workspace = true }
quick-xml = { workspace = true }
mdns-sd = { workspace = true }
socket2 = { workspace = true }
if-addrs = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
realfft = "3"
rayon = { workspace = true }
notify = { workspace = true }
md-5 = { workspace = true }
rusqlite = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }
cpal = { version = "0.17", optional = true }
rust_cast = { workspace = true }
sha2 = { workspace = true }
blowfish = { workspace = true }
chrono = { workspace = true }
cbc = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
unicode-normalization = { workspace = true }
oaat-core = { workspace = true, optional = true }
oaat-controller = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"], optional = true }
# Shared HTTP client TLS: webpki roots via reqwest use_preconfigured_tls, so
# Android never hits the uninitialised rustls-platform-verifier. Must track the
# rustls version reqwest resolves (0.23).
rustls = "0.23"
webpki-roots = "0.26"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.14", default-features = false, features = ["audio_toolbox", "core_audio"], optional = true }
objc2-core-audio = { version = "0.3", default-features = false, features = ["std", "objc2-core-audio-types", "AudioHardware", "AudioHardwareDeprecated"], optional = true }

[dev-dependencies]
tempfile = "3"
axum = { workspace = true }

[features]
default = ["local-audio"]
local-audio = ["cpal", "coreaudio-rs", "objc2-core-audio"]
asio = ["cpal/asio"]
oaat = ["dep:oaat-core", "dep:oaat-controller"]
cloud-relay = ["dep:tokio-tungstenite"]
postgres = ["dep:sqlx"]
