# Standalone workspace: keeps tune-desktop (and its GUI/webkit deps) out of
# the parent tune-server-rust workspace (see root Cargo.toml `exclude`), so it
# never enters the server CI or build matrix.
[workspace]

[package]
name = "tune-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Bertrand Clech <bertrand.clech@orange.fr>"]
repository = "https://github.com/renesenses/tune-server-rust"
description = "Tune native desktop controller (Tauri 2) — thin client over tune-server's HTTP/WS API."

# A lib + bin split: the bin is a thin entry point, the lib holds the app so a
# future mobile target can reuse it via the mobile_entry_point macro.
[lib]
name = "tune_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
