[package]
name = "tune-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tuneserver"
crate-type = ["cdylib", "staticlib"]

[dependencies]
tune-core = { path = "../tune-core" }

[target.'cfg(not(target_os = "android"))'.dependencies]
# Local audio only on desktop (cpal needs platform audio libs)
# On Android, audio goes through DLNA/HTTP to the Flutter player

tune-server = { path = "../tune-server" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
