[package]
name = "tune-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tuneserver"
crate-type = ["cdylib", "staticlib"]

[features]
# The mobile FFI build omits local audio outputs by default; declaring the
# feature makes the `#[cfg(feature = "local-audio")]` gate valid (silences the
# unexpected-cfg warning) and lets a host opt in. Off by default → no build change.
local-audio = ["tune-server/local-audio"]

[dependencies]
tune-core = { path = "../tune-core", default-features = false, features = ["oaat"] }
tune-server = { path = "../tune-server", default-features = false }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
