[package]
name = "tune-pyo3"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tune_native"
crate-type = ["cdylib"]

[dependencies]
tune-core = { path = "../tune-core" }
pyo3 = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
