[package]
name = "tune-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["local-audio", "oaat"]
local-audio = ["tune-core/local-audio"]
oaat = ["tune-core/oaat"]

[dependencies]
tune-core = { path = "../tune-core", default-features = false }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
lofty = { workspace = true }
quick-xml = { workspace = true }
mdns-sd = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = { workspace = true }
futures-util = { workspace = true }
socket2 = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
time = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tower = "0.5"
