# Standalone workspace: keeps tune-widget isolated from the parent
# tune-server-rust workspace (see root Cargo.toml `exclude`).
[workspace]

[package]
name = "tune-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dirs = "6"
tracing = "0.1"
urlencoding = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
